Fixing transforms on mobile

--- a/styles.css
+++ b/styles.css
@@ -95,4 +95,8 @@ a {
     .project-description {
         font-size: calc(8px + 1vw);
     }
+
+    .project {
+        transform: none !important;
+    }
 }
